<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_text" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_psw"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewLoginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_error"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button" />

</LinearLayout>